# Consus

./: .gitignore  .tarballignore  BUGS  LICENSE  Makefile.am  README  SIGNED-OFF-BY  TODO  WIP  configure.ac  consus-debug.cc  consus.cc  consus.supp  libconsus.pc.in  log  namespace.h  visibility.h
bindings/c/: testcompile.c
bindings/python/: consus.pyx  setup.py
client/: c.cc  client.cc  client.h  configuration.cc  configuration.h  consus-internal.h  controller.cc  controller.h  mapper.cc  mapper.h  pending.cc  pending.h  pending_begin_transaction.cc  pending_begin_transaction.h  pending_string.cc  pending_string.h  pending_transaction_abort.cc  pending_transaction_abort.h  pending_transaction_commit.cc  pending_transaction_commit.h  pending_transaction_read.cc  pending_transaction_read.h  pending_transaction_write.cc  pending_transaction_write.h  pending_unsafe_lock_op.cc  pending_unsafe_lock_op.h  pending_unsafe_read.cc  pending_unsafe_read.h  pending_unsafe_write.cc  pending_unsafe_write.h  server_selector.cc  server_selector.h  transaction.cc  transaction.h
common/: background_thread.cc  background_thread.h  client_configuration.cc  client_configuration.h  constants.h  consus.cc  consus.h  coordinator_link.cc  coordinator_link.h  coordinator_returncode.cc  coordinator_returncode.h  crc32c.cc  crc32c.h  data_center.cc  data_center.h  generate_token.cc  generate_token.h  ids.cc  ids.h  kvs.cc  kvs.h  kvs_configuration.cc  kvs_configuration.h  kvs_state.cc  kvs_state.h  lock.cc  lock.h  macros.h  network_msgtype.cc  network_msgtype.h  partition.cc  partition.h  paxos_group.cc  paxos_group.h  ring.cc  ring.h  transaction_group.cc  transaction_group.h  transaction_id.cc  transaction_id.h  (+9 more)
coordinator/: coordinator.cc  coordinator.h  symtable.c  transitions.cc  transitions.h  util.h
doc/: .gitignore  Makefile  assert-same.py  consus.tex  environs.tex  installation.tex
doc/install/: fedora23-src-prereqs  fedora24-python-prereqs  git  linux-amd64  linux-amd64-home  source  ubuntu12.04-python-prereqs  ubuntu12.04-src-prereqs  ubuntu14.04-git-prereqs  ubuntu14.04-src-prereqs  ubuntu16.04-python-prereqs  ubuntu16.10-python-prereqs
include/: consus-admin.h  consus-unsafe.h  consus.h
kvs/: configuration.cc  configuration.h  controller.cc  controller.h  daemon.cc  daemon.h  datalayer.cc  datalayer.h  leveldb_datalayer.cc  leveldb_datalayer.h  lock_manager.cc  lock_manager.h  lock_replicator.cc  lock_replicator.h  lock_state.cc  lock_state.h  main.cc  mapper.cc  mapper.h  migrator.cc  migrator.h  read_replicator.cc  read_replicator.h  replica_set.cc  replica_set.h  table_key_pair.cc  table_key_pair.h  write_replicator.cc  write_replicator.h
m4/: anal_warnings.m4
maint/: generate-gremlin-include  generate-unit-test-gremlins  valgrind-gremlins
man/: consus-coordinator.1.md
test/: 1-node-1-dc-cluster.gremlin  1-node-2-dc-cluster.gremlin  1-node-3-dc-cluster.gremlin  1-node-4-dc-cluster.gremlin  1-node-5-dc-cluster.gremlin  1-node-6-dc-cluster.gremlin  1-node-7-dc-cluster.gremlin  2-node-1-dc-cluster.gremlin  2-node-2-dc-cluster.gremlin  2-node-3-dc-cluster.gremlin  2-node-4-dc-cluster.gremlin  2-node-5-dc-cluster.gremlin  2-node-6-dc-cluster.gremlin  2-node-7-dc-cluster.gremlin  3-node-1-dc-cluster.gremlin  3-node-2-dc-cluster.gremlin  3-node-3-dc-cluster.gremlin  3-node-4-dc-cluster.gremlin  3-node-5-dc-cluster.gremlin  3-node-6-dc-cluster.gremlin  3-node-7-dc-cluster.gremlin  4-node-1-dc-cluster.gremlin  4-node-2-dc-cluster.gremlin  4-node-3-dc-cluster.gremlin  4-node-4-dc-cluster.gremlin  4-node-5-dc-cluster.gremlin  4-node-6-dc-cluster.gremlin  4-node-7-dc-cluster.gremlin  5-node-1-dc-cluster.gremlin  5-node-2-dc-cluster.gremlin  5-node-3-dc-cluster.gremlin  5-node-4-dc-cluster.gremlin  5-node-5-dc-cluster.gremlin  5-node-6-dc-cluster.gremlin  5-node-7-dc-cluster.gremlin  demo.gremlin  env.sh
test/paxos/: generalized-brute-force.cc  generalized-counter-example-generator.cc  generalized-performance.cc  generalized.cc
test/unit/: 00.client.1n.1dc.gremlin  00.client.1n.2dc.gremlin  00.client.1n.3dc.gremlin  00.client.1n.4dc.gremlin  00.client.1n.5dc.gremlin  00.client.1n.6dc.gremlin  00.client.1n.7dc.gremlin  00.client.2n.1dc.gremlin  00.client.3n.1dc.gremlin  00.client.3n.2dc.gremlin  00.client.3n.3dc.gremlin  00.client.3n.4dc.gremlin  00.client.3n.5dc.gremlin  00.client.3n.6dc.gremlin  00.client.3n.7dc.gremlin  00.client.4n.1dc.gremlin  00.client.5n.1dc.gremlin  00.client.5n.2dc.gremlin  00.client.5n.3dc.gremlin  00.client.5n.4dc.gremlin  00.client.5n.5dc.gremlin  00.client.5n.6dc.gremlin  00.client.5n.7dc.gremlin  00.client.py  00.nop-abort.1n.1dc.gremlin  00.nop-abort.1n.2dc.gremlin  00.nop-abort.1n.3dc.gremlin  00.nop-abort.1n.4dc.gremlin  00.nop-abort.1n.5dc.gremlin  00.nop-abort.1n.6dc.gremlin  00.nop-abort.1n.7dc.gremlin  00.nop-abort.2n.1dc.gremlin  00.nop-abort.3n.1dc.gremlin  00.nop-abort.3n.2dc.gremlin  00.nop-abort.3n.3dc.gremlin  00.nop-abort.3n.4dc.gremlin  00.nop-abort.3n.5dc.gremlin  00.nop-abort.3n.6dc.gremlin  00.nop-abort.3n.7dc.gremlin  00.nop-abort.4n.1dc.gremlin  (+128 more)
tools/: availability-check.cc  common.cc  common.h  connect_opts.cc  connect_opts.h  coordinator.cc  create-data-center.cc  debug-client-configuration.cc  debug-kvs-configuration.cc  debug-txman-configuration.cc  locate-coordinator-lib.h  set-default-data-center.cc
txman/: configuration.cc  configuration.h  controller.cc  controller.h  daemon.cc  daemon.h  durable_log.cc  durable_log.h  generalized_paxos.cc  generalized_paxos.h  global_voter.cc  global_voter.h  kvs_lock_op.cc  kvs_lock_op.h  kvs_read.cc  kvs_read.h  kvs_write.cc  kvs_write.h  local_voter.cc  local_voter.h  log_entry_t.cc  log_entry_t.h  main.cc  mapper.cc  mapper.h  paxos_synod.cc  paxos_synod.h  transaction.cc  transaction.h
